@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.15 ===
+* Added left/right and mid/side linking in the UI.
 * Added audio pre-mixing controls.
 
 === 1.0.14 ===
